[BUG] CSS Changes Include Unintended(?) Word-Wrapping & Color Changes Fixes #897

--- a/src/css/bundle.scss
+++ b/src/css/bundle.scss
@@ -498,17 +498,10 @@ input[type='text'].display {
     .scroll-area.left.light-border-right-skills {
         overflow-y: auto;
     } 
+    .list-item.item-section.wrap-collapsiblewrap-collapsible {
+        height: 400px;
+    }
     
-    .list-item[data-item-type="skill"] {
-        
-        color: $yellow;
-    }
-
-    .list-item[data-item-type="knowledgeskill"] {
-        
-        color: $yellow;
-    }
-
     img {
         box-sizing: border-box;
         border: 1px solid var(--color-border-dark);
@@ -880,7 +873,7 @@ input[type='text'].display {
             }
     
             .item-text {
-                width: 6em; // Long enough to avoid most line breaks / test wrapping...
+                // width: 6em; // Long enough to avoid most line breaks / test wrapping...
                 margin: 0 0.1rem;
                 flex: 1 0 auto;
                 text-align: center;
